# fin-sight

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  DEPLOY.md  Dockerfile  README.md  alembic.ini  compose.yaml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
alembic/: env.py
alembic/versions/: 0001_initial.py  0001_reports_pipeline.py  0002_drop_chat.py  0002_seed_vietstock.py  0003_simplify_report_types.py  0004_conversations.py  0005_promote_extraction_facets.py
app/: dependencies.py  main.py  scheduler.py
app/agent/: api.py  dependencies.py  models.py  schemas.py  service.py
app/agent/agents/: __init__.py  base.py
app/agent/runtime/: __init__.py  loop.py
app/agent/tools/: __init__.py  ask_report_pdf.py  base.py  fetch_url.py  get_report_metrics.py  list_facets.py  search_reports.py  web_search.py
app/api/v1/: router.py
app/chat/: api.py  schemas.py  service.py
app/core/: config.py  exceptions.py
app/core/database/: session.py
app/core/llm/: gemini.py
app/core/logging/: middleware.py  setup.py
app/core/ssi/: __init__.py  data_client.py  trading_client.py
app/health/: api.py
app/mcp/: __init__.py  auth.py  render.py  server.py
app/reports/: __main__.py  api.py  dependencies.py  jobs.py  models.py  schemas.py
app/tools/: __init__.py  ask_report_pdf.py  base.py  get_report_metrics.py  get_stock_analysis.py  list_facets.py  search_reports.py  ssi_account.py  ssi_common.py  ssi_market.py
docs/: tmp.txt
frontend/: .env.local.example  next.config.ts  package-lock.json  package.json
frontend/app/: layout.tsx  providers.tsx
frontend/hooks/: use-mobile.ts  use-mounted.ts  use-stored-conversations.ts
frontend/lib/: types.ts  utils.ts
tests/: base.py  test_request_id.py
tests/integration/: conftest.py  test_chat.py
(+78 files in other folders)
