[project]
name = "fin-sight"
version = "0.1.0"
description = "FastAPI service answering user prompts with Gemini."
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "beautifulsoup4>=4.14.3",
    "fastapi>=0.136.1",
    "google-genai>=1.73.1",
    "httpx>=0.28.1",
    "lxml>=6.1.0",
    "minio>=7.2.0",
    "pydantic>=2.13.3",
    "pydantic-settings>=2.14.0",
    "sqlalchemy[asyncio]>=2.0",
    "structlog>=25.5.0",
    "tenacity>=9.0.0",
    "uvicorn[standard]>=0.46.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.12",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM"]

[tool.ruff.lint.per-file-ignores]
"alembic/versions/*.py" = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
